Front da página de Histório de Transações Pronta

--- a/frontend/contas.html
+++ b/frontend/contas.html
@@ -27,7 +27,7 @@
                 <a href="contas.html"><img src="img/contas-icone azul.png" alt="Contas"></a>
             </div>
             <div class="transacao-icone">
-                <a href="transacao.html"><img src="img/transação.png" alt="Ícone transações"></a>
+                <a href="historico-transacoes.html"><img src="img/transação.png" alt="Ícone transações"></a>
             </div>
             <div class="planejamento-icone">
                 <a href="planejamento.html"><img src="img/planejamento-icone.png" alt="Planejamento"></a>
