--- a/frontend/planejamento.html
+++ b/frontend/planejamento.html
@@ -29,7 +29,7 @@
                 <a href="contas.html"><img src="img/contas-icone.png" ></a>
             </div>
             <div class="transacao-icone">
-                <a href="transacao.html"><img src="img/transação.png" alt="Ícone transações"></a>
+                <a href="historico-transacoes.html"><img src="img/transação.png" alt="Ícone transações"></a>
             </div>
             <div class="planejamento-icone">
                 <a href="planejamento.html"><img src="img/planejamento-icone azul.png"></a>
