--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/locale/pt-BR.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>Dashboard</title>
 </head>
@@ -29,7 +30,7 @@
                 <a href="contas.html"><img src="img/contas-icone.png" alt="Ícone Contas"></a>
             </div>
             <div class="transacao-icone">
-                <a href="transacao.html"><img src="img/transação.png" alt="Ícone transações"></a>
+                <a href="historico-transacoes.html"><img src="img/transação.png" alt="Ícone transações"></a>
             </div>
             <div class="planejamento-icone">
                 <a href="planejamento.html"><img src="img/planejamento-icone.png" alt="Ícone Planejamento"></a>
@@ -95,33 +96,6 @@
                 </div>
             </div>
         </div>
-
-        <script>
-            document.getElementById('salvarAlteracoes').addEventListener('click', function() {
-            // Alterar o nome do usuário
-            const nomeUsuario = document.getElementById('nomeUsuario').value;
-            document.getElementById('nomeUsuarioDisplay').textContent = nomeUsuario || 'Usuário';
-
-            // Alterar a foto do perfil
-            const fotoPerfilInput = document.getElementById('fotoPerfil');
-            if (fotoPerfilInput.files && fotoPerfilInput.files[0]) {
-                const reader = new FileReader();
-                reader.onload = function (e) {
-                    document.querySelector('.perfil-img').src = e.target.result;
-                };
-                reader.readAsDataURL(fotoPerfilInput.files[0]);
-            }
-
-            // Fechar o modal
-            var perfilModalEl = document.querySelector('#perfilModal');
-            var perfilModal = bootstrap.Modal.getInstance(perfilModalEl);
-            if (perfilModal) {
-                perfilModal.hide();
-            } else {
-                new bootstrap.Modal(perfilModalEl).hide();
-            }
-        });
-        </script>
 
         <!-- Conteúdo do Dashboard -->
         <div class="dashboard">
@@ -192,6 +166,9 @@
         </div>
     </main>
 
+</html>
+
+
     <script>
         $(document).ready(function() {
             let dataAtual = new Date();
@@ -235,29 +212,129 @@
             $('#btnCancelar').click(function() {
             $('#calendarioModal').fadeOut(); // Fecha o modal com animação
         });
+        const ctx = document.getElementById('despesaReceitaChart').getContext('2d');
+        const despesaReceitaChart = new Chart(ctx, {
+            type: 'pie', // Tipo de gráfico
+            data: {
+                labels: ['Receita', 'Despesa'], // Rótulos
+                datasets: [{
+                    label: 'Despesa e Receita',
+                    data: [3000, 1500], // Valores em reais
+                    backgroundColor: [
+                        'rgba(75, 192, 192, 0.6)', // Cor da Receita
+                        'rgba(255, 0, 0, 0.6)' // Cor da Despesa (Vermelho)
+                    ],
+                    borderColor: [
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(255, 0, 0, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    legend: {
+                        position: 'top',
+                    },
+                    title: {
+                        display: true,
+                        text: 'Despesa e Receita' // Título do gráfico
+                    },
+                    tooltip: {
+                        callbacks: {
+                            label: function(tooltipItem) {
+                                const value = tooltipItem.raw;
+                                return `${tooltipItem.label}: R$ ${value.toLocaleString('pt-BR')}`; // Formatação dos dados em reais
+                            }
+                        }
+                    }
+                }
+            }
+        });
+        const chartCtx = document.getElementById('planejamentoMensalChart').getContext('2d');
+    const planejamentoMensalChart = new Chart(chartCtx, {
+        type: 'bar', // Tipo do gráfico
+        data: {
+            labels: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+            datasets: [{
+                label: 'Planejamento Mensal (R$)',
+                data: [1200, 1900, 3000, 2500, 2000, 1500, 4000, 2200, 2800, 3200, 2700, 3500], // Valores em R$
+                backgroundColor: 'rgba(16, 13, 171, 0.6)', // Cor das barras
+                borderColor: 'rgba(16, 13, 171, 1)',
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                y: {
+                    beginAtZero: true,
+                    title: {
+                        display: true,
+                        text: 'Valor (R$)'
+                    }
+                },
+                x: {
+                    title: {
+                        display: true,
+                        text: 'Meses'
+                    }
+                }
+            },
+            responsive: true,
+            plugins: {
+                legend: {
+                    display: true,
+                    position: 'top',
+                },
+                title: {
+                    display: true,
+                    text: 'Gráfico de Planejamento Mensal'
+                }
+            }
+        }
+    });
+    document.getElementById('salvarAlteracoes').addEventListener('click', function() {
+            // Alterar o nome do usuário
+            const nomeUsuario = document.getElementById('nomeUsuario').value;
+            document.getElementById('nomeUsuarioDisplay').textContent = nomeUsuario || 'Usuário';
+
+            // Alterar a foto do perfil
+            const fotoPerfilInput = document.getElementById('fotoPerfil');
+            if (fotoPerfilInput.files && fotoPerfilInput.files[0]) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    document.querySelector('.perfil-img').src = e.target.result;
+                };
+                reader.readAsDataURL(fotoPerfilInput.files[0]);
+            }
+
+            // Fechar o modal
+            var perfilModalEl = document.querySelector('#perfilModal');
+            var perfilModal = bootstrap.Modal.getInstance(perfilModalEl);
+            if (perfilModal) {
+                perfilModal.hide();
+            } else {
+                new bootstrap.Modal(perfilModalEl).hide();
+            }
+        });
         });
     </script>
 </script>
-<!-- Modal para Adicionar Despesa ou Receita -->
-<div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="addModalLabel">Adicionar</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body text-center">
-                <button type="button" class="btn btn-light" id="btnDespesa">
-                    <img src="img/despesa.png" alt="Despesa" style="width: 50px;"><br>
-                    Despesa
-                </button>
-                <button type="button" class="btn btn-light" id="btnReceita">
-                    <img src="img/receita.png" alt="Receita" style="width: 50px;"><br>
-                    Receita
-                </button>
+    <main>
+        <div class="container mt-4">
+            <div class="chart-container">
+                <canvas id="despesaReceitaChart" width="400" height="400"></canvas>
             </div>
         </div>
+    </main>
+<body>
+<div class="chart-container planejamento-container">
+    <div class="orçamento">
+        <p><strong>Orçamento Total:</strong> R$ 10.000</p>
+        <p><strong>Restam:</strong> R$ 4.500 &nbsp; <strong>Previsto:</strong> R$ 5.500</p>
     </div>
+    <canvas id="planejamentoMensalChart"></canvas>
 </div>
 
 </body>
