--- a/frontend/metas.html
+++ b/frontend/metas.html
@@ -55,7 +55,11 @@
             <span>Até:</span>
             <input class="filtro-data" id="data-final" type="date">
             <button type="submit">Filtrar</button>
-            <div class="botao-adicionar" data-bs-toggle="modal" data-bs-target="#botaoadd">+</div>
+            <div class="botao-adicionar" data-bs-toggle="modal" data-bs-target="#botaoadd">
+                Adicionar 
+                <img src="img/adicionar-branco.png" alt="Adicionar" style="width: 25px; height: 25px;" class="imagem-adicionar">
+            </div>
+            
         </form>
 
         <div class="metas">
