--- a/frontend/historico-transacoes.html
+++ b/frontend/historico-transacoes.html
@@ -102,35 +102,40 @@
     
                     <tbody id="table-body">
                         <tr data-bs-toggle="modal" data-bs-target="#altModal">
-                            <td id="tipo">Despesa</td>
+                            <td><img src="img/despesa.png" alt="Despesa" style="width: 16px; height: 16px; vertical-align: middle;">
+                                Despesa </td>
                             <td id="categoria">Mercado</td>
                             <td id="data">07/10/2024</td>
                             <td id="conta">Bradesco</td>
                             <td id="valor">R$ 100,00</td>
                         </tr>
                         <tr data-bs-toggle="modal" data-bs-target="#altModal">
-                            <td>Receita</td>
+                            <td><img src="img/receita.png" alt="Receita" style="width: 16px; height: 16px; vertical-align: middle;">
+                            Receita </td>
                             <td>Pix</td>
                             <td>09/10/2024</td>
                             <td>Bradesco</td>
                             <td>R$ 200,00</td>
                         </tr>
                         <tr data-bs-toggle="modal" data-bs-target="#altModal">
-                            <td>Receita</td>
+                            <td><img src="img/receita.png" alt="Receita" style="width: 16px; height: 16px; vertical-align: middle;">
+                                Receita </td>
                             <td>Pix</td>
                             <td>09/10/2024</td>
                             <td>Bradesco</td>
                             <td>R$ 200,00</td>
                         </tr>
                         <tr data-bs-toggle="modal" data-bs-target="#altModal">
-                            <td>Receita</td>
+                            <td><img src="img/receita.png" alt="Receita" style="width: 16px; height: 16px; vertical-align: middle;">
+                                Receita </td>
                             <td>Pix</td>
                             <td>09/10/2024</td>
                             <td>Bradesco</td>
                             <td>R$ 200,00</td>
                         </tr>
                         <tr data-bs-toggle="modal" data-bs-target="#altModal">
-                            <td>Receita</td>
+                            <td><img src="img/receita.png" alt="Receita" style="width: 16px; height: 16px; vertical-align: middle;">
+                                Receita </td>
                             <td>Pix</td>
                             <td>09/10/2024</td>
                             <td>Bradesco</td>
